# evaluate-humanoid-gymnasium

./: .gitignore  README.md  ppo_quickstart.py  pyproject.toml  quickstart.py  sac_quickstart.py
src/: modified_env.py
tmp/sb3_log-position-velocity-com_inertia-actuator_forces/: events.out.tfevents.1736474532.ed3a79b989f6.5138.5  progress.csv
tmp/sb3_log-position-velocity-com_inertia-actuator_forces-external_contact_forces/: events.out.tfevents.1736474526.ed3a79b989f6.5138.4  progress.csv
tmp/sb3_log-position-velocity-com_inertia-com_velocity/: events.out.tfevents.1736474520.ed3a79b989f6.5138.3  progress.csv
tmp/sb3_log-position-velocity-com_inertia-com_velocity-actuator_forces/: events.out.tfevents.1736473997.ed3a79b989f6.5023.1  events.out.tfevents.1736474507.ed3a79b989f6.5138.1  events.out.tfevents.1736474751.ed3a79b989f6.5336.1  progress.csv
tmp/sb3_log-position-velocity-com_inertia-com_velocity-actuator_forces-external_contact_forces/: events.out.tfevents.1736473672.ed3a79b989f6.5023.0  events.out.tfevents.1736474499.ed3a79b989f6.5138.0  events.out.tfevents.1736474590.ed3a79b989f6.5251.0  events.out.tfevents.1736474683.ed3a79b989f6.5336.0  progress.csv
tmp/sb3_log-position-velocity-com_inertia-com_velocity-external_contact_forces/: events.out.tfevents.1736474320.ed3a79b989f6.5023.2  events.out.tfevents.1736474514.ed3a79b989f6.5138.2  events.out.tfevents.1736474817.ed3a79b989f6.5336.2  progress.csv
tmp/sb3_log-position-velocity-com_inertia-external_contact_forces/: events.out.tfevents.1736474539.ed3a79b989f6.5138.6  progress.csv
(+361 files in other folders)
