[project]
name = "humanoid-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[classic-control,mujoco]>=1.0.0",
    "opencv-python>=4.10.0.84",
    "stable-baselines3>=2.4.1",
    "tensorboard>=2.18.0",
    "tqdm>=4.67.1",
]
